--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "esprima": "*",
     "diff": "*",
-    "gaze": "*"
+    "gaze": "*",
+
+    "express": "*",
+    "body-parser": "*"
   },
   "engines": {
     "node": "v4.2.3",
